--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
   <h2 class="section-title">よくある質問</h2>
 
   <div class="faq-item">
+    <details><summary>スマホ録音でも大丈夫？</summary>
+      <p>大歓迎です😊 ノイズ除去なども対応。まずは気軽にご相談ください！</p>
+    </details>
+  </div>
+
+  <div class="faq-item">
     <details><summary>頭出し（スタート位置合わせ）はどうやるの？</summary>
       <p>Audacity や GarageBand などの無料アプリで先頭の無音をカットし、波形がゼロから始まるようにしてください。難しい場合は無加工で送っていただければ当サロンが代行します😊</p>
     </details>
@@ -210,7 +216,10 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
 
   <div class="faq-item">
     <details><summary>ギガファイル便の使い方がわからない</summary>
-      <p>PC は <code>gigafile.nu</code> にファイルをドラッグ → 「URL をコピー」→ DM へ貼付。スマホは「ファイルを選択」→ アップ後リンクを共有で OK。Wi-Fi 環境推奨です。</p>
+<p>
+  PC は <a href="https://gigafile.nu/" target="_blank"><code>gigafile.nu</code></a> にファイルをドラッグ → 「URL をコピー」→ DM へ貼付。<br>
+  スマホは「ファイルを選択」→ アップ後リンクを共有で OK。Wi-Fi 環境推奨です。
+</p>
     </details>
   </div>
 
