--- a/index.html
+++ b/index.html
@@ -195,7 +195,23 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     <div class="workflow-step"><span>1</span><p>DM でご相談 &amp; お見積り（24 時間以内に返信）</p></div>
     <div class="workflow-step"><span>2</span><p>録音データ提出（GigaFile／Google Drive など）</p></div>
     <div class="workflow-step"><span>3</span><p>MIX → ご確認 → 後払い → 納品（mp3 / wav / mp4）</p></div>
-  </div>
+    <div class="workflow-step"><span>★</span><p>ご依頼の際は、こちらにご記入の上録音の音源とともにDMにてお送りください。<br>
+※ご不明な項目がありましたら、ご記入は不要です。<br>
+<br>
+・楽曲名:<br>
+・オリジナル楽曲URL:<br>
+・キー変更:<br>
+・BPM:<br>
+・長さ:（フルコーラスorワンコーラス）<br>
+・トラック数:<br>
+・使用インターフェース名/マイク名：<br>
+・エンコード(有料): （有or無） <br>
+・お支払方法：（銀行振込、PayPay）<br>
+・納品は２～３週間前後になります。<br>
+・Mixに関するご要望:<br>
+</p>
+</div>
+
 </section>
 
 <!-- 5. FAQ -->
