--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ryuzan Mix Salon | 歌ってみたMIX・動画エンコード専門サロン</title>
+<title>【歌ってみたMIX専門】Ryuzan Mix Salon｜VTuber・歌い手さん向け高品質MIX</title>
+<meta name="description" content="VTuber・歌い手向け！Ryuzan Mix Salonは、プロ品質の歌ってみたMIX・動画エンコードを低価格で提供。豊富な実績・丁寧対応・明確な価格で、初めての方も安心してご依頼いただけます。">
+<meta name="keywords" content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様">
+
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="favicon256.png" sizes="32x32">
 <link rel="icon" type="image/png" href="favicon256.png" sizes="192x192">
 <link rel="apple-touch-icon" href="favicon256.png">
 
-<meta name="description" content="Ryuzan Mix Salon は高品質な歌ってみたボーカルMIXと動画エンコードを提供するオンラインサロンです。透明な料金設定・24時間以内の丁寧サポート・50曲以上の実績サンプルで安心してご依頼いただけます。">
-<meta name="keywords" content="歌ってみた,MIX,ボーカルミックス,動画エンコード,ハモリ作成,リピーター割,YouTube,TikTok,ラベンダーサロン">
 <link rel="canonical" href="https://ryuzanmix.github.io/">
 <meta name="robots" content="index,follow">
 
@@ -19,18 +22,19 @@
 <meta property="og:url" content="https://ryuzanmix.github.io/">
 <meta property="og:title" content="Ryuzan Mix Salon | 歌ってみたMIXサロン">
 <meta property="og:description" content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。">
-<meta property="og:image" content="og-image.jpg">
+<meta property="og:image" content="og-image.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://x.com/ryuzanmix">
 <meta property="twitter:title" content="Ryuzan Mix Salon | 歌ってみたMIXサロン">
 <meta property="twitter:description" content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。">
-<meta property="twitter:image" content="og-image.jpg">
+<meta property="twitter:image" content="og-image.png">
 
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com/">
-<link href="css2" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
 
 <style>
 :root{
@@ -124,6 +128,26 @@ section{padding:70px 20px;max-width:1100px;margin:auto;}
 .contact{text-align:center;display:flex;flex-direction:column;gap:14px;}
 footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem;}
 </style>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Ryuzan Mix Salon",
+  "url": "https://ryuzanmix.github.io/",
+  "logo": "https://ryuzanmix.github.io/ryuzan-mix-salon-logo.png",
+  "sameAs": [
+    "https://x.com/ryuzanmix"
+  ],
+  "description": "VTuber・歌い手向け歌ってみたMIX専門のオンラインサロン。高品質かつ低価格、実績豊富で初心者にも安心。",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "customer service",
+    "email": "ryuzan.mix@gmail.com"
+  }
+}
+</script>
+
 </head>
 
 <body>
@@ -132,14 +156,14 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
 <header class="hero">
   <div class="hero-inner">
     <div class="hero-text">
-      <img src="logo.png" alt="Ryuzan Mix Salon ロゴ" class="logo">
+      <img src="ryuzan-mix-salon-logo.png" alt="Ryuzan Mix Salon ロゴ" class="logo" loading="lazy">
       <h1>Ryuzan Mix Salon</h1>
       <p class="tagline">“歌声トリートメント” 専門の<br>ボーカルMIX &amp; エンコードサロン</p>
       <a href="#contact"><button class="cta">まずはDMで相談 →</button></a>
     </div>
 
     <div class="hero-illust">
-      <img src="header_illustration_vtuber.png" alt="">
+      <img src="header_illustration_vtuber.png" alt="歌ってみたMIX専門サロンのイラスト">
     </div>
   </div>
 </header>
@@ -159,16 +183,20 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
 
 <!-- 2. サンプル -->
 <section id="playlist">
-  <h2 class="section-title">実績＋サンプル</h2>
+  <h2 class="section-title">歌ってみたMIXの実績・サンプル音源集</h2>
+  <h3>50曲以上の仕上がりをYouTubeで公開中！</h3>
   <div class="playlist-wrapper">
-<iframe width="560" height="315"
-  src="https://www.youtube.com/embed/videoseries?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9"
+<iframe loading="lazy" width="560" height="315"
+  src="https://www.youtube.com/embed/videoseries?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9&rel=0"
   title="YouTube video playlist"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen>
 </iframe>
   </div>
+<p style="color: var(--text-light); font-size: 0.95rem;">
+初めての方も安心してご依頼いただけるよう、MIX内容・納期・価格を明確にご案内しています。
+</p>
 </section>
 
 <!-- 3. 料金 -->
@@ -186,6 +214,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     </tbody>
   </table>
   <p style="margin-top:14px;color:var(--text-light);">🎁 <strong>リピーター割</strong>：いつでも 500 円 OFF</p>
+<p style="color: var(--text-light); font-size: 0.95rem;">
+全プラン税込・後払い対応。MIX初心者の方にもわかりやすい料金体系で安心してご利用いただけます。
+</p>
 </section>
 
 <!-- 4. フロー -->
@@ -211,7 +242,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
 ・Mixに関するご要望:<br>
 </p>
 </div>
-
+<p style="color: var(--text-light); font-size: 0.95rem;">
+やり取りはすべて丁寧かつ迅速に対応。ご希望や不安点も、DMでお気軽にご相談いただけます。
+</p>
 </section>
 
 <!-- 5. FAQ -->
@@ -256,6 +289,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       <p>もちろん大歓迎！お気軽に DM でご相談ください。</p>
     </details>
   </div>
+<p style="color: var(--text-light); font-size: 0.95rem;">
+Ryuzan Mix Salonは「はじめてのMIX依頼でも安心」を大切に、やさしく丁寧なサポートを心がけています。
+</p>
 </section>
 </main>
 
@@ -269,7 +305,12 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
   </div>
 </section>
 
-<footer>Copyright ©️ 2025 Ryuzan Mix Salon</footer>
+<footer>
+  <p>お問い合わせ：<a href="mailto:ryuzan.mix@gmail.com">ryuzan.mix@gmail.com</a></p>
+  <p>運営：Ryuzan Mix Salon（個人運営）</p>
+  <p>所在地：日本</p>
+  <p>&copy; 2025 Ryuzan Mix Salon</p>
+</footer>
 
 
 
